Changelog
===========

3.2.3 (unreleased)
------------------

- Fixed a bug with using the ``tabledump`` and ``tableload`` functions with
  tables containing array columns (columns in which each element is an array
  instead of a single scalar value). (spacetelescope/PyFITS#22)

- Fixed an issue where PyFITS allowed newline characters in header values and
  comments. (spacetelescope/PyFITS#51)


3.1.6 (unreleased)
------------------

- Fixed a bug with using the ``tabledump`` and ``tableload`` functions with
  tables containing array columns (columns in which each element is an array
  instead of a single scalar value). (Backported from 3.2.3)

- Fixed an issue where PyFITS allowed newline characters in header values and
  comments. (Backported from 3.2.3)


3.2.2 (2014-03-28)
------------------

- Fixed a regression on deletion of record-valued keyword cards using
  the Header wildcard syntax.  This was intended to be fixed before the
  v3.2.1 release.


3.1.5 (2014-03-25)
------------------

- Fixed a regression on deletion of record-valued keyword cards using
  the Header wildcard syntax.  This was intended to be fixed before the
  v3.1.4 release.


3.2.1 (2014-03-04)
------------------

- Nominal support for the upcoming Python 3.4.

- Added missing features from the ``Header.insert()`` method that were
  intended for inclusion in the original 3.1 release:  In addition to
  accepting an integer index as the first argument, it also supports supplying
  a keyword name as the first argument for insertion relative to a specific
  keyword.  It also now supports an optional ``after`` argument.  If
  ``after=True`` the the insertion is made below the insertion point instead
  of above it. (spacetelescope/PyFITS#12)

- Fixed support for broadcasting of values assigned to table columns.
  (spacetelescope/PyFITS#48)

- A grab bag of minor performance improvements in headers.
  (spacetelescope/PyFITS#46)
