@@ -11,6 +11,9 @@ Changelog
 - Fixed an issue where PyFITS allowed newline characters in header values and
   comments. (spacetelescope/PyFITS#51)
 
+- Fixed pickling of ``FITS_rec`` (table data) objects.
+  (spacetelescope/PyFITS#53)
+
 
 3.1.6 (unreleased)
 ------------------
@@ -21,6 +24,9 @@ Changelog
 
 - Fixed an issue where PyFITS allowed newline characters in header values and
   comments. (Backported from 3.2.3)
+
+- Fixed pickling of ``FITS_rec`` (table data) objects.
+  (Backported from 3.2.3)
 
 
 3.2.2 (2014-03-28)
